--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://junior13farias:46v1Ukr6x4vkfEvt@cluster0.uvpgw.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
